# acm-dl-hci-searcher-

./: .bumpversion.cfg  AUTHORS.rst  CONTRIBUTING.rst  README.rst  pyproject.toml  tasks.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: poetry-publish.yml
acm_dl_hci_searcher/: __main__.py  cli.py
acm_dl_searcher/: __init__.py  __main__.py  cli.py  search_operations.py
docs/: conf.py  index.rst  installation.rst  usage.rst
