[tool]
[tool.poetry]
name = "acm_dl_hci_searcher"
version = "0.1.0"
homepage = "https://github.com/ahmed-shariff/acm_dl_hci_searcher"
description = "Top-level package for ACM DL HCI Searcher."
authors = ["Ahmed Shariff <shariff.mfa@outlook.com>"]
readme = "README.rst"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
]
packages = [
    { include = "acm_dl_hci_searcher" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.6"

click = "^7.1.2"
minilog = "^1.5"
requests = "^2.24.0"


[tool.poetry.dev-dependencies]
bumpversion = "*"
coverage = "*"
flake8 = "*"
invoke = "*"
isort = "*"
pylint = "*"

sphinx = "*"
tox = "*"
yapf = "*"

[tool.poetry.scripts]
acm-dl-hci-searcher = 'acm_dl_hci_searcher.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
